--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dataloader-results",
   "version": "1.0.1",
   "description": "helpers for dataloader useful to return compliant results",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "jest",
     "test:watch": "npm test src/ -- --watch",
